@@ -1,6 +1,7 @@
 2011-01-20
 * add option to switch between absolute and relative reporting of paths, to
 make unpacked files easier to find in /tmp after a scan
+* always report both absolute and relative paths, remove switch
 
 2011-01-17
 * add configuration for BusyBox 1.18.2
